# Poetry-Pydantic-GitHubCI-CD

./: .gitlab-ci.yml  db.sqlite  pyproject.toml
.github/workflows/: python-app.yml
app/: __init__.py  app.py  database.py  main.py  models.py  routes.py  schemas.py
app/static/: crud.js
app/templates/: admin.html  crud.html  items.html  login.html  register.html
tests/: main.py
