[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["prince <nguhprince1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
pytest = "^8.2.2"
pydantic = {extras = ["email"], version = "^2.7.4"}
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
